--- a/.github/workflows/buildMesa.yml
+++ b/.github/workflows/buildMesa.yml
@@ -17,7 +17,9 @@ jobs:
         run: |
           echo "--> Enabling the [multilib] repo, syncing and updating..."
           sed -i "/\[multilib\]/,/Include/"'s/^#//' /etc/pacman.conf
-          pacman -Syu --noconfirm
+          pacman -Syy --noconfirm
+
+          pacman -Syyu --noconfirm
 
           echo "--> Installing dependencies..."
           pacman -S --noconfirm base-devel git sudo lib32-gcc-libs lib32-zlib lib32-libffi lib32-zstd lib32-libxml2
