--- a/.github/workflows/buildMesa.yml
+++ b/.github/workflows/buildMesa.yml
@@ -16,8 +16,9 @@ jobs:
       - name: Init pacman and install dependencies
         run: |
           echo "--> Enabling the [multilib] repo, syncing and updating..."
-          sed -i "s/^#\[multilib\]/[multilib]/" /etc/pacman.conf
-          sed -i "/\[multilib\]/{n;s/^#Include/Include/}" /etc/pacman.conf
+          cat /etc/pacman.conf
+          sed -i "/\[multilib\]/,/Include/"'s/^#//' /etc/pacman.conf
+          cat /etc/pacman.conf
           pacman -Syyu --noconfirm
 
           echo "--> Installing dependencies..."
