--- a/.github/workflows/buildMesa.yml
+++ b/.github/workflows/buildMesa.yml
@@ -16,8 +16,7 @@ jobs:
       - name: Init pacman and install dependencies
         run: |
           echo "--> Enabling the [multilib] repo, syncing and updating..."
-          cat /etc/pacman.conf
-          sed -i "/\[multilib\]/,/Include/"'s/^#//' /etc/pacman.conf
+          echo -e "\n[multilib]\nInclude = /etc/pacman.d/mirrorlist" | sudo tee -a /etc/pacman.conf
           cat /etc/pacman.conf
           pacman -Syyu --noconfirm
 
