--- a/.github/workflows/buildMesa.yml
+++ b/.github/workflows/buildMesa.yml
@@ -16,12 +16,13 @@ jobs:
       - name: Init pacman and install dependencies
         run: |
           echo "--> Enabling the [multilib] repo, syncing and updating..."
+          pacman -S sudo --noconfirm
           echo -e "\n[multilib]\nInclude = /etc/pacman.d/mirrorlist" | sudo tee -a /etc/pacman.conf
           cat /etc/pacman.conf
           pacman -Syyu --noconfirm
 
           echo "--> Installing dependencies..."
-          pacman -S --noconfirm base-devel git sudo lib32-gcc-libs lib32-zlib lib32-libffi lib32-zstd lib32-libxml2
+          pacman -S --noconfirm base-devel git lib32-gcc-libs lib32-zlib lib32-libffi lib32-zstd lib32-libxml2
 
       - name: Create non-root build user
         run: |
