--- a/.github/workflows/buildMesa.yml
+++ b/.github/workflows/buildMesa.yml
@@ -101,8 +101,8 @@ jobs:
         uses: softprops/action-gh-release@v2.3.2
         with:
           files: artifacts/*.pkg.tar.zst
-          tag_name: ${{ steps.prep_articats.outputs.tag_name }}
-          name: Mesa & LLVM Build ${{ steps.prep_articats.outputs.tag_name }}
+          tag_name: ${{ steps.prep_artifacts.outputs.tag_name }}
+          name: Mesa & LLVM Build ${{ steps.prep_artifacts.outputs.tag_name }}
           body: |
             Automated build of mesa-git, lib32-mesa-git, llvm-minimal-git, and lib32-llvm-minimal-git.
             
